--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,8 @@ tasks.register('genCHeaders', Exec) {
             'src/main/java/de/rasmusantons/cubiomes/Range.java',
             'src/main/java/de/rasmusantons/cubiomes/Pos.java',
             'src/main/java/de/rasmusantons/cubiomes/Pos3.java',
-            'src/main/java/de/rasmusantons/cubiomes/StructureType.java'
+            'src/main/java/de/rasmusantons/cubiomes/StructureType.java',
+            'src/main/java/de/rasmusantons/cubiomes/BiomeFilter.java'
 }
 
 clean.doFirst {
