--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ def isWindows = Os.isFamily(Os.FAMILY_WINDOWS)
 def crossGcc = 'x86_64-w64-mingw32-gcc'
 def canCrossCompile = file("/usr/bin/${crossGcc}").exists()
 
+compileJava {
+    sourceCompatibility = 17
+    targetCompatibility = 17
+}
+
 repositories {
     mavenCentral()
 }
